--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -12,10 +12,13 @@
     "@react-three/drei": "^10.0.4",
     "@react-three/fiber": "^9.0.4",
     "@types/three": "^0.174.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.477.0",
     "next": "15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "three": "^0.174.0"
+    "three": "^0.174.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
